# ATLAS

./: .env.example  .gitignore  AGENTIC_AI.md  ATCG_Master_Agent_Prompt.md  CLI_COMMANDS.md  README.md  groq-logs-Default_Project-1d-2026-06-12-06-29-41.csv  pyproject.toml
docs/: agentic_ai.md  reviewer_workflow_guide.md
scripts/: init_db.py
src/atcg/: __init__.py  cli.py  config.py  graph.py  llm_router.py  state.py
src/atcg/db/: __init__.py  connection.py  fixtures.py  history.py  migrations.py  schema.py
src/atcg/layers/: __init__.py  base.py  functional.py  integration.py  performance.py  security.py  unit.py
src/atcg/nodes/: __init__.py  m0_git_diff.py  m1_ingestion.py  m2_ast_parser.py  m3_rag_embedder.py  m4_test_planner.py  m5_agents.py  m5_join.py  m5_owasp.py  m6_test_executor.py  m6_validator.py  m7_neon_writer.py  m8_coverage.py
src/atcg/parsers/: __init__.py
src/atcg/prompts/: __init__.py
src/atcg/utils/: __init__.py
src/atlas/: __init__.py  config.py  graph.py  state.py
src/atlas/agents/: functional.py  integration.py  performance.py  unit.py
src/atlas/agents/layers/: __init__.py  base.py
src/atlas/cli/: __init__.py  cli.py  progress.py  reports.py  settings.py  widgets.py
src/atlas/models/: __init__.py  llm_router.py
src/atlas/nodes/: __init__.py  m0_git_diff.py  m1_ingestion.py  m2_ast_parser.py  m4_test_planner.py  m5_agents.py  m5_join.py  m5_owasp.py  m6_test_executor.py  m7_disk_writer.py  m8_coverage.py
src/atlas/security/: __init__.py  security.py
tests/: __init__.py  atlas_test_report.md  test_pipeline_helpers.py  test_state_aggregation.py
