[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atcg"
version = "3.0.0"
description = "Automated Test Case Generator — Multi-Agent LangGraph Pipeline with 5-Layer Test Generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ATCG Team" }]

dependencies = [
    # ── LangGraph + LangChain Core ──────────────────────────────────────
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",

    # ── Neon / Postgres ─────────────────────────────────────────────────
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.30.0",

    # ── AST Parsing ─────────────────────────────────────────────────────
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",

    # ── RAG & Embeddings ────────────────────────────────────────────────
    "pgvector>=0.3.0",

    # ── Git Integration ─────────────────────────────────────────────────
    "gitpython>=3.1.0",

    # ── Data Validation ─────────────────────────────────────────────────
    "pydantic>=2.9.0",

    # ── CLI & Output ────────────────────────────────────────────────────
    "click>=8.1.0",
    "rich>=13.9.0",

    # ── Environment ─────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
atcg = "atcg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atcg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
