[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas"
version = "1.0.0"
description = "Automated Test Case Generator - LangGraph Pipeline with 5-Layer Test Generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ATLAS Team" }]

dependencies = [
    # LangGraph + LangChain Core
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-groq>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",

    # AST parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",

    # Git integration
    "gitpython>=3.1.0",

    # Data validation
    "pydantic>=2.9.0",

    # CLI and output
    "click>=8.1.0",
    "rich>=13.9.0",
    "InquirerPy>=0.3.4",

    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
atlas = "atlas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
